--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,28 @@
     <TextView
         android:id="@+id/osebe"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="129dp" />
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:text="Seznam postov"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prikaziOsebe"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        />
 
     <Button
         android:id="@+id/prikaziOsebe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Prikazi osebe"
-        android:onClick="prikaziOsebe"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="36dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Prikazi poste"
+        android:onClick="prikaziPoste"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
